...
                    AccessKey(
                        mnemonic: viewModel.inflightMnemonic,
                        url: .login(with: viewModel.inflightMnemonic)
                    )
                    .contextMenu {
                        Button(action: copy) {
                            Label("Copy", systemImage: SystemSymbol.doc.rawValue)
                        }
                    }
                    
                    Text("Your Access Key is the only way to access your account. Please keep it private and safe.")
                        .font(.appTextSmall)
                        .foregroundStyle(.textMain)
...
