...
                                router.push(.accessKey)
                            }
                            DialogAction.cancel()
                        }
                    }

                    SettingsRow(systemImage: "flask", title: "Beta Features", insets: insets) {
                        router.push(.settingsAdvancedBetaFeatures)
                    }

                    SettingsRow(systemImage: "doc.text", title: "Application Logs", insets: insets) {
                        router.push(.settingsApplicationLogs)
                    }
...
                }
                .font(.appDisplayXS)
                .foregroundStyle(.textMain)
                .padding(.horizontal, 20)
            }
        }
        .navigationTitle("Advanced")
        .toolbarTitleDisplayMode(.inline)
        .dialog(item: $dialogItem)
    }

    // MARK: - Actions -

...
